[gd_scene load_steps=7 format=2]

[ext_resource path="res://backgrounds/assets_theme_3/layer_03_1920 x 1080.png" type="Texture" id=1]
[ext_resource path="res://backgrounds/assets_theme_3/layer_02_1920 x 1080.png" type="Texture" id=2]
[ext_resource path="res://backgrounds/assets_theme_3/layer_04_1920 x 1080.png" type="Texture" id=3]
[ext_resource path="res://backgrounds/assets_theme_3/layer_05_1920 x 1080.png" type="Texture" id=4]
[ext_resource path="res://backgrounds/background_theme_3.gd" type="Script" id=5]
[ext_resource path="res://backgrounds/assets_theme_3/layer_01_1920 x 1080.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Layer011920X1080" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1453, 969.998 )
scale = Vector2( 1.5125, 1.77407 )
texture = ExtResource( 6 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Layer021920X1080" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1452.5, 969.998 )
scale = Vector2( 1.51145, 1.77407 )
texture = ExtResource( 2 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Layer031920X1080" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1453, 969.998 )
scale = Vector2( 1.5125, 1.77407 )
texture = ExtResource( 1 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Layer041920X1080" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 1453, 969.998 )
scale = Vector2( 1.5125, 1.77407 )
texture = ExtResource( 3 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Layer051920X1080" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 1453, 969.998 )
scale = Vector2( 1.5125, 1.77407 )
texture = ExtResource( 4 )
